objects/BRNSHRK__BrainsharkInvitation__c.object
<CustomObject>
    <description>Tracks invitations to view Brainshark presentations</description>
    <fields>
        <fullName>BRNSHRK__ActivityRecordId__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Activity Record Id</label>
        <length>24</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>BRNSHRK__Activity__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>The Brainshark Activity record related to this invitation</description>
        <label>Activity</label>
        <referenceTo>BRNSHRK__BrainsharkActivity__c</referenceTo>
        <relationshipLabel>Brainshark Invitations</relationshipLabel>
        <relationshipName>Brainshark_Invitations</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__BrainsharkPresentation__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>The Brainshark presentation sent out in this invite</description>
        <label>Presentation Title</label>
        <referenceTo>BRNSHRK__BrainsharkPresentation__c</referenceTo>
        <relationshipLabel>Brainshark Invitations</relationshipLabel>
        <relationshipName>Brainshark_Invitations</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__CampaignID__c</fullName>
        <formula>BRNSHRK__RelatedCampaign__c &amp; BRNSHRK__RelatedOpportunity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Campaign ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Brainshark Invitations</relationshipLabel>
        <relationshipName>Brainshark_Invitations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__HasViews__c</fullName>
        <formula>IF(BRNSHRK__ViewCount__c &gt; 0, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Has Views</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__IntegrationKey__c</fullName>
        <label>Related Send/View</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Brainshark Invitations</relationshipLabel>
        <relationshipName>Brainshark_Invitations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__MemberID__c</fullName>
        <formula>BRNSHRK__Contact__c &amp; BRNSHRK__Lead__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MemberID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__OpportunityStage__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Stage Sent</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__Pid__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Presentation ID</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__RelatedAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Brainshark Invitations</relationshipLabel>
        <relationshipName>Brainshark_Invitations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__RelatedCampaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Brainshark Invitations</relationshipLabel>
        <relationshipName>Brainshark_Invitations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__RelatedCase__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Brainshark Invitations</relationshipLabel>
        <relationshipName>Brainshark_Invitations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__RelatedContract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Brainshark Invitations</relationshipLabel>
        <relationshipName>Brainshark_Invitations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__RelatedOpportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Brainshark Invitations</relationshipLabel>
        <relationshipName>Brainshark_Invitations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__RelatedSolution__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Solution</label>
        <referenceTo>Solution</referenceTo>
        <relationshipLabel>Brainshark Invitations</relationshipLabel>
        <relationshipName>Brainshark_Invitations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__SenderRole__c</fullName>
        <formula>Owner:User.UserRole.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sender Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__SentBodyHtml__c</fullName>
        <description>The HTML formatted body of the sent email.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Sent Body HTML</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__SentBody__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Sent Body</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__SentByActiveUser__c</fullName>
        <formula>IF(Owner:User.IsActive = TRUE, TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sent by Active User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__SentByIsLoggedInUser__c</fullName>
        <formula>IF(Owner:User.Id = $User.Id, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sent by is Logged in user</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__SentByRunningUser__c</fullName>
        <formula>IF(Owner:User.Id = $User.Id, TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sent by = Running User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__SentDateTime__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Sent Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__SentSubject__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Sent Subject</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__SfdcCompany__c</fullName>
        <formula>IF(ISBLANK(BRNSHRK__Contact__r.Account.Name), IF(ISBLANK(BRNSHRK__Lead__r.Company), &quot;&quot;, BRNSHRK__Lead__r.Company), BRNSHRK__Contact__r.Account.Name)</formula>
        <inlineHelpText>Formula pulls data from Lead/Contact.</inlineHelpText>
        <label>SFDC: Company</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__SfdcEmail__c</fullName>
        <formula>IF(ISBLANK(BRNSHRK__Contact__r.Email), BRNSHRK__Lead__r.Email, BRNSHRK__Contact__r.Email)</formula>
        <inlineHelpText>Formula pulls data from Lead/Contact.</inlineHelpText>
        <label>SFDC: Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__SfdcPhone__c</fullName>
        <formula>IF(BRNSHRK__Contact__c = &quot;&quot;, BRNSHRK__Lead__r.Phone, BRNSHRK__Contact__r.Phone)</formula>
        <inlineHelpText>Formula pulls data from Lead/Contact.</inlineHelpText>
        <label>SFDC: Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__SfdcTitle__c</fullName>
        <formula>IF(BRNSHRK__Contact__c = &quot;&quot;, BRNSHRK__Lead__r.Title, BRNSHRK__Contact__r.Title)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Pulls the Job Title field from the Lead/Contact record.</inlineHelpText>
        <label>SFDC: Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__Source__c</fullName>
        <label>Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Salesforce</fullName>
                </value>
                <value>
                    <fullName>Auto-Generated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRNSHRK__ViewCount__c</fullName>
        <description>Count of all views related to this invitation</description>
        <label>View Count</label>
        <summaryForeignKey>BRNSHRK__BrainsharkView__c.BRNSHRK__Invitation__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Brainshark Invitation</label>
    <listViews>
        <fullName>BRNSHRK__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Content Sent</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Brainshark Invitations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>